<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ark Wiki</string>
    <string name="title_activity_main">Ark Wiki</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="test">Test</string>
    <string name="content_description">an image from the ark wiki</string>
    <string name="dinosaur_image_description">an image of a dinosaur</string>
    <string name="dinosaur_temperament">Temperament: %s</string>
    <string name="taming_method">Taming Method: %s</string>
    <string name="preferred_food">Preferred Food: %s</string>
    <string name="content_description_2">an image of what the dinosaur eats</string>
    <string name="diet">Diet</string>
    <string name="image">content description</string>
    <string name="name">Name: %s</string>
    <string name="type">Type: %s</string>
    <string name="durability">Durability: %s</string>
    <string name="ingredients">Ingredients:</string>
    <string name="ingredient">%s x %s</string>
    <string name="requirements_title">Requirements</string>
    <string name="requirements">For creatures to successfully mate, they must be:\n\t\t- of same species\n\t\t- of opposite sex (one male and one female)\n\t\t- within mating range of each other\n\t\t- wandering or set to mate (Enable Wandering or Enable Mating must be enabled on both creatures)\n\t\t- not following anything (Disable Following on both creatures)\n\t\t- unburdened (the creatures must not be carrying so much weight they are unable to move)\n\t\t- not mounted\n\t\t- not spayed/neutered\n\t\t- not having a mating cooldown (once mated females have a mating cooldown interval before they can mate again, the cooldown can also be triggered when transferring the creature between Arks)</string>
    <string name="range_title">Mating Range While Wandering:</string>
    <string name="range">If using the Enable Wandering method to allow for mating, then steps need to be taken to maintain the mating range, which varies between species and is loosely based on the size of the adult creature. If the mating pair wander outside the mating range, then mating is stopped and mating progress is reset.\n\nBuilding a pen of a suitably small size to keep the wandering creatures within mating range of each other is one common approach.</string>
    <string name="mating_title">Mating:</string>
    <string name="mating">When the above conditions are all met, a small red heart icon appears over the heads of the mating creatures, and a mating bar appears on the female\'s HUD (look at the female to reveal the HUD). The HUD also indicates which creature they are mating with.\n\nOnce the mating bar is completed, non-mammalian females drop a single fertilized egg , and mammalian females start gestating.</string>
    <string name="special_conditions_title">Special Conditions:</string>
    <string name="special_conditions">Some of the creatures will only mate when certain conditions are given.\n\t\t- Royal Griffin - will only mate with the other gender with similar surname.\n\t\t- Ferox - will only mate when the female is at least 95%+ addiction as a small creature.\n\t\t- Magmasaur - will only mate when the female is submerged in the lava surface in Volcano Region on any map.\n\t\t- Megachelon - will only mate at deep depths in the ocean.\n\t\t- Beelzebufo - will only mate in water.\n\t\t- Diplocaulus - will only mate in water</string>
    <string name="wait_title">Mating Wait Interval:</string>
    <string name="wait">Females cannot mate again until a mating wait interval has passed (Cryofreezing them will still continue the mating interval cooldown). This interval is indicated on their HUD.\n\nThe mating interval starts after the creature has laid the egg or gestation has completed. The mating interval is also started for female creatures that are transferred between servers. Males can mate at any time.</string>
    <string name="incubation_title">Incubation:</string>
    <string name="incubation">Incubation is the process of hatching Fertilized Eggs into babies as part of breeding.\n\nIncubation requires time and a steady temperature, e.g. by isolation in a room, fire, Otter/Dimetrodon , or Air Conditioners can be used to increase or decrease the temperature respectively. The amount of time an incubated egg requires before it hatches into a baby dinosaur depends on the species of the parents. To incubate, the egg must be placed directly on the floor/ground; if the temperature is not correct, the egg will lose health until it dies.\n\nThe incubation can be \'paused\' by picking up the egg. Place the egg in a refrigerator to preserve it longer, the incubation progress will be saved.</string>
    <string name="placeholder">%s</string>
    <string name="ko_title">Knock-out Taming:</string>
    <string name="ko">1. First, render the creature unconscious.\n\n2. Once the creature is unconscious, open its inventory and feed it an appropriate food item by dragging food into its inventory and waiting for the creature to eat it. The food needed to tame it will vary based on the creature you are trying to tame. Keep plenty of food in the animal\'s inventory while taming; if the creature runs out of food, the taming bar will begin to go down until it gets more food. Force feeding them anything other than Narcoberries or Narcotic will fill their hunger but will not affect the taming bar, effectively making the tame take longer.\n\t\t- Herbivores will eat Berries and Crops\n\t\t- Carnivores will eat Meat\n\t\t- Some creatures, like Araneo and Pulmonoscorpius, will eat other items like spoiled meat.\n\t\t- Most creatures will also eat kibble, which usually speeds up the process.\n\n3. Keep the creature unconscious throughout the process. The Unconscious bar decreases with the creature\'s  Torpor, and can be refilled with Narcoberries or Narcotic. The creature will not voluntarily eat these items, and so they must be force fed by hitting the use-key in the creatures inventory when hovering over the item.</string>
    <string name="nv_title">Non-Violent Taming (NV):</string>
    <string name="nv" tools:ignore="TypographyDashes">Many creatures can also be tamed without knocking them out.\n\n1. Put the food you plan to feed to the creature in the far–right slot of your hotbar.\n\t\t- Some examples of non-violent taming are:- Araneo will eat Meat.\n\t\t- Chalicotherium takes Beer.\n\t\t- Dung Beetle takes Feces or Spoiled Meat.\n\t\t- Gigantopithecus will eat Berries.\n\n2. Approach the creature and press the use key to feed it when prompted.\n\t\t- Lystrosaurus, Moschops, and Ichthyosaurus are peaceful and won\'t run when you approach them and you won\'t lose taming effectivness should you touch them.\n\t\t- Most other creatures will run away or attack you if you approach and you will lose taming effectivness should you touch them.\n\t\t- For other creatures, Ghillie Armor is recommended and Bug Repellant will help when taming bugs and the Onyc as they may attack when touched.\n\n3. Wait for the creature to become hungry enough up to roughly 90% of its hunger ex:36000-40000 to eat again. This can take varying amounts of time depending on the creature in question and the food you are feeding it.\n\n4. Repeat this process until the taming bar is filled.\n\nNote that the first instance of food you feed to the creature is akin to knocking it unconscious with a violent tame - it binds the tame to the Survivor (or their tribe) and the creature\'s hunger will begin decreasing. At this point - the taming effectiveness and taming progress will not begin to diminish unless the creature starts taking damage (i.e. enters combat or starts dying of starvation). The initial delay between the first and second feedings compared to all subsequent feedings is also greater. Once fed a second time, progress will begin to reset if you take too long to feed. Moving too far away before a second feeding will also un-bind the tame - resetting everything (although its food may take a few moments to update).</string>
    <string name="unv_title">Unique Non-Violent Taming:</string>
</resources>