<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/craft_image_detail"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/content_description"
        tools:src="@tools:sample/avatars"
        android:layout_margin="32dp" />

    <TextView
        android:id="@+id/craft_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/craft_image_detail"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_margin="40dp" />

    <TextView
        android:id="@+id/craft_type_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/craft_name_detail"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/type"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/craft_durability_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/craft_type_detail"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/durability"
        android:textSize="20sp"
        android:layout_margin="40dp" />


    <TextView
        android:id="@+id/craft_ingredients_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/craft_durability_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ingredients"
        android:textSize="20sp"
        android:layout_margin="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>