<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/dinosaur_image_detail"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/dinosaur_image_description"
        tools:src="@tools:sample/avatars"
        android:layout_margin="32dp" />

    <TextView
        android:id="@+id/dinosaur_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dinosaur_image_detail"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

    <ImageView
        android:id="@+id/dinosaur_diet_image_detail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/dinosaur_name_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dinosaur_temperament_detail"
        android:contentDescription="@string/content_description_2"
        tools:src="@tools:sample/avatars"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/dinosaur_diet_text_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dinosaur_name_detail"
        app:layout_constraintStart_toEndOf="@id/dinosaur_diet_image_detail"
        tools:text="@string/diet"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/dinosaur_temperament_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dinosaur_diet_text_detail"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/dinosaur_temperament"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/dinosaur_food_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dinosaur_temperament_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/preferred_food"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>